// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots components/HistoryTable/Cell Column Header Cell Story 1`] = `
<div>
  <div
    class="css-t6ohyf-BaseCell-HeaderCell e1bcz5i61"
    data-cy="header-cell"
  >
    <a
      class="lg-ui-0003 leafygreen-ui-cssveg css-84rhzu-StyledLink leafygreen-ui-1320234"
      href="https://spruce.mongodb.com"
    >
      <span
        class="leafygreen-ui-baoi4d"
      >
        displayName
      </span>
    </a>
  </div>
</div>
`;

exports[`storybook Storyshots components/HistoryTable/Cell Empty Cell Story 1`] = `
<div>
  <div
    class="css-azgjvx-BaseCell-Cell e1bcz5i62"
    data-cy="empty-cell"
  >
    <div
      class="css-8xlg5e-Circle e1bcz5i64"
    />
  </div>
</div>
`;

exports[`storybook Storyshots components/HistoryTable/Cell Loading Cell Story 1`] = `
<div>
  <div
    class="css-azgjvx-BaseCell-Cell e1bcz5i62"
    data-cy="loading-cell"
  >
    <div
      class="ant-skeleton ant-skeleton-element ant-skeleton-active"
    >
      <span
        class="ant-skeleton-avatar ant-skeleton-avatar-circle"
        style="width: 20px; height: 20px; line-height: 20px;"
      />
    </div>
  </div>
</div>
`;

exports[`storybook Storyshots components/HistoryTable/Cell Task Cell Story 1`] = `
<div>
  <div
    class="css-azgjvx-BaseCell-Cell e1bcz5i62"
    data-cy="task-cell"
  >
    <a
      href="/task/task-1"
    >
      <div
        class="css-1saonyd-Container e12dzyme2"
        data-cy="history-table-icon"
        data-status="success"
      >
        <div
          class="css-amsv4f-IconContainer e12dzyme1"
        >
          <svg
            aria-label="Checkmark Icon"
            class="leafygreen-ui-zgssm"
            fill="none"
            height="30"
            role="img"
            viewBox="0 0 16 16"
            width="30"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <p
          class="leafygreen-ui-1tb6tuo"
        />
      </div>
    </a>
  </div>
</div>
`;
